fix planner datepicker z-index

--- a/src/components/PlannerItem/planner-item.module.scss
+++ b/src/components/PlannerItem/planner-item.module.scss
@@ -192,3 +192,7 @@ td.plannerItem__text {
     }
   }
 }
+
+.calendar {
+  z-index: 2;
+}
